# SAS

./: encode_faces.py  main.py  pyproject.toml  run_attendance.py  run_dashboard.py
data/: daily_attendance.csv  encodings.pkl  tt.json
frontend/: home.html  index.html  register.html  user.html
