[project]
name = "smart-attendance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlib>=20.0.1",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "imutils>=0.5.4",
    "mediapipe==0.10.14",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "python-multipart>=0.0.27",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
